@@ -44,15 +44,15 @@ namespace Orthanc
     RemoteModalityParameters modality_;
     bool ignoreExceptions_;
     std::string localAet_;
-    uint16_t moveMessageID_;
+    uint16_t moveOriginatorID_;
 
   public:
     StoreScuCommand(ServerContext& context,
                     const std::string& localAet,
                     const RemoteModalityParameters& modality,
                     bool ignoreExceptions,
-                    uint16_t moveMessageID /* only makes sense if this 
-                                              command results from a C-MOVE */);
+                    uint16_t moveOriginatorID /* only makes sense if this 
+                                                 command results from a C-MOVE */);
 
     virtual bool Apply(ListOfStrings& outputs,
                        const ListOfStrings& inputs);
